tests/lean/parserPrio.lean.expected.out
[1, 2]
6
parserPrio.lean:28:7-28:10: error: ambiguous, possible interpretations 
  2 * 1 : ?γ
  
  [1] : List ?α
[1, 2, 3]
